--- a/client/src/app/project/source-uploader/source-uploader.component.scss
+++ b/client/src/app/project/source-uploader/source-uploader.component.scss
@@ -33,6 +33,7 @@ md-card-actions {
   margin-bottom: 0;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   button {
     margin-left: 10px;
