--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -4,6 +4,23 @@
 @import '../node_modules/@swimlane/ngx-datatable/release/themes/material.css';
 @import './variables';
 
+/* Utility queries for showing/hiding
+ * elements based on availble real estate
+ */
+@media all and (min-width: 480px) {
+  .sm-show {
+    display: none;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .lg-show {
+    display: none;
+  }
+}
+
+/* Component-level styling
+ */
 [md-mini-fab] {
   background-color: black;
 }
@@ -17,6 +34,8 @@ md-icon {
   }
 }
 
+/* Element-level styling
+ */
 html, body, .viewport {
   width: 100%;
   height: 100%;
